--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<p class="has-line-data" data-line-start="0" data-line-end="1">Support</p>
+<p class="has-line-data" data-line-start="2" data-line-end="3">Frequently Asked Questions (FAQs):</p>
+<ol>
+<li class="has-line-data" data-line-start="4" data-line-end="7">
+<p class="has-line-data" data-line-start="4" data-line-end="6">How do I register for an account?<br>
+To register for an account, simply open the app and navigate to the registration screen. You will be prompted to enter your desired username, email and password. Once you’ve entered the required information, tap the “Submit” button to create your account.</p>
+</li>
+<li class="has-line-data" data-line-start="7" data-line-end="10">
+<p class="has-line-data" data-line-start="7" data-line-end="9">How do I log in to my account?<br>
+To log in to your account, open the app and navigate to the login screen. Enter your email and password, then tap the “Login” button to access your account.</p>
+</li>
+<li class="has-line-data" data-line-start="10" data-line-end="13">
+<p class="has-line-data" data-line-start="10" data-line-end="12">How do I search for movies?<br>
+To search for movies, use the search bar located at the top of the app’s main screen. Simply enter the title of the movie you’re looking for and tap the search icon. You’ll be presented with a list of search results that match your query.</p>
+</li>
+<li class="has-line-data" data-line-start="13" data-line-end="16">
+<p class="has-line-data" data-line-start="13" data-line-end="15">How do I rate a movie?<br>
+To rate a movie, first, search for the movie you want to rate using the app’s search functionality. Once you’ve found the movie, tap on it to view its details. You’ll see an option to rate the movie on a scale of 0 to 10. Simply scroll the desired rating to submit your vote using the Submit button.</p>
+</li>
+<li class="has-line-data" data-line-start="16" data-line-end="19">
+<p class="has-line-data" data-line-start="16" data-line-end="18">How do I add friends?<br>
+To add friends, navigate to the friends section of the app. You’ll see an option to search for other users by their username. Enter the username of the person you want to add as a friend and tap the “Add Friend” button. Once the request is sent and accepted, you’ll be able to see your friend’s movie ratings.</p>
+</li>
+</ol>
+<p class="has-line-data" data-line-start="19" data-line-end="20">Contact Us:</p>
+<p class="has-line-data" data-line-start="21" data-line-end="22">If you have any further questions or encounter any issues while using the app, please don’t hesitate to contact us. You can reach us via email at <a href="mailto:heverlym@gmail.com">heverlym@gmail.com</a>. We’re here to help and will do our best to assist you as quickly as possible.</p>
+<p class="has-line-data" data-line-start="23" data-line-end="24">Thank you for using Cinebud</p>
