--- a/index.html
+++ b/index.html
@@ -1,27 +1,113 @@
-<p class="has-line-data" data-line-start="0" data-line-end="1">Support</p>
-<p class="has-line-data" data-line-start="2" data-line-end="3">Frequently Asked Questions (FAQs):</p>
-<ol>
-<li class="has-line-data" data-line-start="4" data-line-end="7">
-<p class="has-line-data" data-line-start="4" data-line-end="6">How do I register for an account?<br>
-To register for an account, simply open the app and navigate to the registration screen. You will be prompted to enter your desired username, email and password. Once you’ve entered the required information, tap the “Submit” button to create your account.</p>
-</li>
-<li class="has-line-data" data-line-start="7" data-line-end="10">
-<p class="has-line-data" data-line-start="7" data-line-end="9">How do I log in to my account?<br>
-To log in to your account, open the app and navigate to the login screen. Enter your email and password, then tap the “Login” button to access your account.</p>
-</li>
-<li class="has-line-data" data-line-start="10" data-line-end="13">
-<p class="has-line-data" data-line-start="10" data-line-end="12">How do I search for movies?<br>
-To search for movies, use the search bar located at the top of the app’s main screen. Simply enter the title of the movie you’re looking for and tap the search icon. You’ll be presented with a list of search results that match your query.</p>
-</li>
-<li class="has-line-data" data-line-start="13" data-line-end="16">
-<p class="has-line-data" data-line-start="13" data-line-end="15">How do I rate a movie?<br>
-To rate a movie, first, search for the movie you want to rate using the app’s search functionality. Once you’ve found the movie, tap on it to view its details. You’ll see an option to rate the movie on a scale of 0 to 10. Simply scroll the desired rating to submit your vote using the Submit button.</p>
-</li>
-<li class="has-line-data" data-line-start="16" data-line-end="19">
-<p class="has-line-data" data-line-start="16" data-line-end="18">How do I add friends?<br>
-To add friends, navigate to the friends section of the app. You’ll see an option to search for other users by their username. Enter the username of the person you want to add as a friend and tap the “Add Friend” button. Once the request is sent and accepted, you’ll be able to see your friend’s movie ratings.</p>
-</li>
-</ol>
-<p class="has-line-data" data-line-start="19" data-line-end="20">Contact Us:</p>
-<p class="has-line-data" data-line-start="21" data-line-end="22">If you have any further questions or encounter any issues while using the app, please don’t hesitate to contact us. You can reach us via email at <a href="mailto:heverlym@gmail.com">heverlym@gmail.com</a>. We’re here to help and will do our best to assist you as quickly as possible.</p>
-<p class="has-line-data" data-line-start="23" data-line-end="24">Thank you for using Cinebud</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Support & Privacy Policy - Cinebud</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            padding: 20px;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #333;
+        }
+        p, li {
+            color: #666;
+            font-size: 16px;
+        }
+        a {
+            color: #d6336c;
+        }
+        ol {
+            padding-left: 20px;
+        }
+        .contact, .privacy {
+            background-color: #e9ecef;
+            padding: 15px;
+            margin: 20px 0;
+            border-left: 4px solid #d6336c;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 40px;
+            color: #888;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+<h1>Support</h1>
+        <p>Frequently Asked Questions (FAQs):</p>
+        <ol>
+            <li>
+                <h2>How do I register for an account?</h2>
+                <p>To register for an account, simply open the app and navigate to the registration screen. You will be prompted to enter your desired username, email and password. Once you've entered the required information, tap the "Submit" button to create your account.</p>
+            </li>
+            <li>
+                <h2>How do I log in to my account?</h2>
+                <p>To log in to your account, open the app and navigate to the login screen. Enter your email and password, then tap the "Login" button to access your account.</p>
+            </li>
+            <li>
+                <h2>How do I search for movies?</h2>
+                <p>To search for movies, use the search bar located at the top of the app's main screen. Simply enter the title of the movie you're looking for and tap the search icon. You'll be presented with a list of search results that match your query.</p>
+            </li>
+            <li>
+                <h2>How do I rate a movie?</h2>
+                <p>To rate a movie, first, search for the movie you want to rate using the app's search functionality. Once you've found the movie, tap on it to view its details. You'll see an option to rate the movie on a scale of 0 to 10. Simply scroll the desired rating to submit your vote using the Submit button.</p>
+            </li>
+            <li>
+                <h2>How do I add friends?</h2>
+                <p>To add friends, navigate to the friends section of the app. You'll see an option to search for other users by their username. Enter the username of the person you want to add as a friend and tap the "Add Friend" button. Once the request is sent and accepted, you'll be able to see your friend's movie ratings.</p>
+            </li>
+        </ol>
+        <div class="contact">
+            <h2>Contact Us:</h2>
+            <p>If you have any further questions or encounter any issues while using the app, please don’t hesitate to contact us. You can reach us via email at heverlym@gmail.com. We're here to help and will do our best to assist you as quickly as possible.</p>
+        </div>
+        <h1>Privacy Policy</h1>
+        <p>This Privacy Policy explains how Cinebud (“we,” “us,” or “our”) collects, uses, shares, and protects information in relation to our mobile application (the "App").</p>
+        <p>By using the App, you agree to the collection and use of information in accordance with this Privacy Policy.</p>
+        <p>Information Collection and Use</p>
+        <p>Our App does not collect any personal information from users. We do not require users to provide us with any personal information to use the App.</p>
+        <p>The only information we collect is non-personal information that is generated automatically as users interact with the App. This includes:</p>
+        <ul>
+            <li>Usage data, such as the actions performed within the App and the frequency of use.</li>
+            <li>Technical information, such as device information (e.g., device model, operating system version) and App version.</li>
+        </ul>
+        <p>Use of Information</p>
+        <p>We use the information collected solely for the purpose of improving the user experience and functionality of the App. This includes:</p>
+        <ul>
+            <li>Analyzing usage patterns to identify areas for improvement.</li>
+            <li>Debugging and troubleshooting technical issues.</li>
+            <li>Enhancing the performance and features of the App.</li>
+        </ul>
+        <p>Sharing of Information</p>
+        <p>We do not share any information collected from users with third parties. All data collected is used exclusively for the purposes outlined in this Privacy Policy.</p>
+        <p>Third-Party Services</p>
+        <p>Our App utilizes the TMDB API to provide movie information and ratings. Please note that your use of the TMDB API is subject to TMDB's Terms of Service and Privacy Policy. We are not responsible for the privacy practices or content of third-party services.</p>
+        <p>Security</p>
+        <p>We take reasonable precautions to protect the information collected from users against unauthorized access, alteration, or destruction.</p>
+        <p>Children's Privacy</p>
+        <p>Our App is not directed to children under the age of 13, and we do not knowingly collect personal information from children. If you believe that we may have inadvertently collected personal information from a child under the age of 13, please contact us immediately.</p>
+        <div class="privacy">
+            <h2>Changes to This Privacy Policy</h2>
+            <p>We reserve the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the updated Privacy Policy on the App. Your continued use of the App after any changes to this Privacy Policy will constitute your acceptance of such changes.</p>
+        </div>
+        <div class="footer">
+            <p>Thank you for using Cinebud</p>
+        </div>
+    </div>
+</body>
+</html>
