--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 <h2>How do I add friends?</h2>
                 <p>To add friends, navigate to the friends section of the app. You'll see an option to search for other users by their username. Enter the username of the person you want to add as a friend and tap the "Add Friend" button. Once the request is sent and accepted, you'll be able to see your friend's movie ratings.</p>
             </li>
+            <li>
+                <h2>How do I delete my account?</h2>
+                <p>To delete your account, go to the settings section of the app. You'll find an option to delete your account. Tap on it and follow the prompts to confirm the deletion. Please note that this action is irreversible and all your data will be lost.</p>
+            </li>
         </ol>
         <div class="contact">
             <h2>Contact Us:</h2>
