--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
                 <h2>How do I delete my account?</h2>
                 <p>To delete your account, go to the settings section of the app. You'll find an option to delete your account. Tap on it and follow the prompts to confirm the deletion. Please note that this action is irreversible and all your data will be lost.</p>
             </li>
+            <li>
+                <h2>How do I reset my password?</h2>
+                <p>To reset your password, follow these steps:</p>
+                <ol>
+                    <li>Open the app and navigate to the login screen.</li>
+                    <li>Tap on the "Forgot password?" button.</li>
+                    <li>Enter your email address associated with your account.</li>
+                    <li>Tap the "Submit" button.</li>
+                    <li>Check your email inbox for instructions on how to reset your password.</li>
+                    <li>Follow the instructions provided in the email to reset your password.</li>
+                </ol>
+            </li>
         </ol>
         <div class="contact">
             <h2>Contact Us:</h2>
