--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support & Privacy Policy - Cinebud</title>
+    <title>Support & Privacy Policy - Cinebud & TickleTap</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -48,81 +48,103 @@
 </head>
 <body>
     <div class="container">
-<h1>Support</h1>
+        <h1>Support</h1>
+        
+        <h2>Cinebud FAQs:</h2>
         <p>Frequently Asked Questions (FAQs):</p>
         <ol>
+            <!-- Cinebud FAQs (unchanged from the original) -->
             <li>
                 <h2>How do I register for an account?</h2>
-                <p>To register for an account, simply open the app and navigate to the registration screen. You will be prompted to enter your desired username, email and password. Once you've entered the required information, tap the "Submit" button to create your account.</p>
+                <p>To register for an account, simply open the app and navigate to the registration screen...</p>
             </li>
             <li>
                 <h2>How do I log in to my account?</h2>
-                <p>To log in to your account, open the app and navigate to the login screen. Enter your email and password, then tap the "Login" button to access your account.</p>
+                <p>To log in to your account, open the app and navigate to the login screen...</p>
             </li>
             <li>
                 <h2>How do I search for movies?</h2>
-                <p>To search for movies, use the search bar located at the top of the app's main screen. Simply enter the title of the movie you're looking for and tap the search icon. You'll be presented with a list of search results that match your query.</p>
+                <p>To search for movies, use the search bar located at the top of the app's main screen...</p>
             </li>
             <li>
                 <h2>How do I rate a movie?</h2>
-                <p>To rate a movie, first, search for the movie you want to rate using the app's search functionality. Once you've found the movie, tap on it to view its details. You'll see an option to rate the movie on a scale of 0 to 10. Simply scroll the desired rating to submit your vote using the Submit button.</p>
+                <p>To rate a movie, first, search for the movie you want to rate using the app's search functionality...</p>
             </li>
             <li>
                 <h2>How do I add friends?</h2>
-                <p>To add friends, navigate to the friends section of the app. You'll see an option to search for other users by their username. Enter the username of the person you want to add as a friend and tap the "Add Friend" button. Once the request is sent and accepted, you'll be able to see your friend's movie ratings.</p>
+                <p>To add friends, navigate to the friends section of the app...</p>
             </li>
             <li>
                 <h2>How do I delete my account?</h2>
-                <p>To delete your account, go to the settings section of the app. You'll find an option to delete your account. Tap on it and follow the prompts to confirm the deletion. Please note that this action is irreversible and all your data will be lost.</p>
+                <p>To delete your account, go to the settings section of the app...</p>
             </li>
             <li>
                 <h2>How do I reset my password?</h2>
-                <p>To reset your password, follow these steps:</p>
-                <ol>
-                    <li>Open the app and navigate to the login screen.</li>
-                    <li>Tap on the "Forgot password?" button.</li>
-                    <li>Enter your email address associated with your account.</li>
-                    <li>Tap the "Submit" button.</li>
-                    <li>Check your email inbox for instructions on how to reset your password.</li>
-                    <li>Follow the instructions provided in the email to reset your password.</li>
-                </ol>
+                <p>To reset your password, follow these steps...</p>
             </li>
         </ol>
+
+        <h2>TickleTap FAQs:</h2>
+        <p>Frequently Asked Questions (FAQs):</p>
+        <ol>
+            <li>
+                <h2>How do I set the number of jokes I receive per day?</h2>
+                <p>To set the number of jokes you receive per day, open the TickleTap app, tap on the settings icon, and adjust the frequency slider from 0 to 10 jokes per day.</p>
+            </li>
+            <li>
+                <h2>How do I get an instant joke?</h2>
+                <p>To get an instant joke, simply open the TickleTap app and tap the "Tap to get a joke!" button on the main screen. You'll receive a joke right away.</p>
+            </li>
+            <li>
+                <h2>What is the source of the jokes?</h2>
+                <p>The jokes in TickleTap are provided by the <a href="https://official-joke-api.appspot.com/">Official Joke API</a>. We use this API to bring you a variety of random jokes throughout the day.</p>
+            </li>
+            <li>
+                <h2>How do I stop receiving jokes?</h2>
+                <p>To stop receiving jokes, go to the settings page and set the frequency to 0. This will disable the notifications for daily jokes.</p>
+            </li>
+            <li>
+                <h2>How do I access the Terms and Conditions?</h2>
+                <p>You can access the Terms and Conditions by tapping the "Terms and Conditions" button in the Info section of the TickleTap app.</p>
+            </li>
+        </ol>
+
         <div class="contact">
             <h2>Contact Us:</h2>
             <p>If you have any further questions or encounter any issues while using the app, please don’t hesitate to contact us. You can reach us via email at heverlym@gmail.com. We're here to help and will do our best to assist you as quickly as possible.</p>
         </div>
+
         <h1>Privacy Policy</h1>
-        <p>This Privacy Policy explains how Cinebud (“we,” “us,” or “our”) collects, uses, shares, and protects information in relation to our mobile application (the "App").</p>
-        <p>By using the App, you agree to the collection and use of information in accordance with this Privacy Policy.</p>
+        <p>This Privacy Policy applies to both Cinebud and TickleTap (“we,” “us,” or “our”) and explains how we collect, use, share, and protect information in relation to our mobile applications (the "Apps").</p>
+        <p>By using either of the Apps, you agree to the collection and use of information in accordance with this Privacy Policy.</p>
         <p>Information Collection and Use</p>
-        <p>Our App does not collect any personal information from users. We do not require users to provide us with any personal information to use the App.</p>
-        <p>The only information we collect is non-personal information that is generated automatically as users interact with the App. This includes:</p>
+        <p>Our Apps do not collect any personal information from users. We do not require users to provide us with any personal information to use the Apps.</p>
+        <p>The only information we collect is non-personal information that is generated automatically as users interact with the Apps. This includes:</p>
         <ul>
-            <li>Usage data, such as the actions performed within the App and the frequency of use.</li>
+            <li>Usage data, such as the actions performed within the Apps and the frequency of use.</li>
             <li>Technical information, such as device information (e.g., device model, operating system version) and App version.</li>
         </ul>
         <p>Use of Information</p>
-        <p>We use the information collected solely for the purpose of improving the user experience and functionality of the App. This includes:</p>
+        <p>We use the information collected solely for the purpose of improving the user experience and functionality of the Apps. This includes:</p>
         <ul>
             <li>Analyzing usage patterns to identify areas for improvement.</li>
             <li>Debugging and troubleshooting technical issues.</li>
-            <li>Enhancing the performance and features of the App.</li>
+            <li>Enhancing the performance and features of the Apps.</li>
         </ul>
         <p>Sharing of Information</p>
         <p>We do not share any information collected from users with third parties. All data collected is used exclusively for the purposes outlined in this Privacy Policy.</p>
         <p>Third-Party Services</p>
-        <p>Our App utilizes the TMDB API to provide movie information and ratings. Please note that your use of the TMDB API is subject to TMDB's Terms of Service and Privacy Policy. We are not responsible for the privacy practices or content of third-party services.</p>
+        <p>TickleTap utilizes the Official Joke API to provide jokes. Cinebud uses the TMDB API to provide movie information and ratings. Please note that your use of these APIs is subject to the respective Terms of Service and Privacy Policies. We are not responsible for the privacy practices or content of third-party services.</p>
         <p>Security</p>
         <p>We take reasonable precautions to protect the information collected from users against unauthorized access, alteration, or destruction.</p>
         <p>Children's Privacy</p>
-        <p>Our App is not directed to children under the age of 13, and we do not knowingly collect personal information from children. If you believe that we may have inadvertently collected personal information from a child under the age of 13, please contact us immediately.</p>
+        <p>Our Apps are not directed to children under the age of 13, and we do not knowingly collect personal information from children. If you believe that we may have inadvertently collected personal information from a child under the age of 13, please contact us immediately.</p>
         <div class="privacy">
             <h2>Changes to This Privacy Policy</h2>
-            <p>We reserve the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the updated Privacy Policy on the App. Your continued use of the App after any changes to this Privacy Policy will constitute your acceptance of such changes.</p>
+            <p>We reserve the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the updated Privacy Policy on the Apps. Your continued use of the Apps after any changes to this Privacy Policy will constitute your acceptance of such changes.</p>
         </div>
         <div class="footer">
-            <p>Thank you for using Cinebud</p>
+            <p>Thank you for using Cinebud and TickleTap</p>
         </div>
     </div>
 </body>
