--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support & Privacy Policy - Cinebud & TickleTap</title>
+    <title>Support & Privacy Policy - Cinebud & Wrist Jester</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -84,20 +84,20 @@
             </li>
         </ol>
 
-        <h2>TickleTap FAQs:</h2>
+        <h2>Wrist Jester FAQs:</h2>
         <p>Frequently Asked Questions (FAQs):</p>
         <ol>
             <li>
                 <h2>How do I set the number of jokes I receive per day?</h2>
-                <p>To set the number of jokes you receive per day, open the TickleTap app, tap on the settings icon, and adjust the frequency slider from 0 to 10 jokes per day.</p>
+                <p>To set the number of jokes you receive per day, open the Wrist Jester app, tap on the settings icon, and adjust the frequency slider from 0 to 10 jokes per day.</p>
             </li>
             <li>
                 <h2>How do I get an instant joke?</h2>
-                <p>To get an instant joke, simply open the TickleTap app and tap the "Tap to get a joke!" button on the main screen. You'll receive a joke right away.</p>
+                <p>To get an instant joke, simply open the Wrist Jester app and tap the "Tap to get a joke!" button on the main screen. You'll receive a joke right away.</p>
             </li>
             <li>
                 <h2>What is the source of the jokes?</h2>
-                <p>The jokes in TickleTap are provided by the <a href="https://official-joke-api.appspot.com/">Official Joke API</a>. We use this API to bring you a variety of random jokes throughout the day.</p>
+                <p>The jokes in Wrist Jester are provided by the <a href="https://official-joke-api.appspot.com/">Official Joke API</a>. We use this API to bring you a variety of random jokes throughout the day.</p>
             </li>
             <li>
                 <h2>How do I stop receiving jokes?</h2>
@@ -105,7 +105,7 @@
             </li>
             <li>
                 <h2>How do I access the Terms and Conditions?</h2>
-                <p>You can access the Terms and Conditions by tapping the "Terms and Conditions" button in the Info section of the TickleTap app.</p>
+                <p>You can access the Terms and Conditions by tapping the "Terms and Conditions" button in the Info section of the Wrist Jester app.</p>
             </li>
         </ol>
 
@@ -115,7 +115,7 @@
         </div>
 
         <h1>Privacy Policy</h1>
-        <p>This Privacy Policy applies to both Cinebud and TickleTap (“we,” “us,” or “our”) and explains how we collect, use, share, and protect information in relation to our mobile applications (the "Apps").</p>
+        <p>This Privacy Policy applies to both Cinebud and Wrist Jester (“we,” “us,” or “our”) and explains how we collect, use, share, and protect information in relation to our mobile applications (the "Apps").</p>
         <p>By using either of the Apps, you agree to the collection and use of information in accordance with this Privacy Policy.</p>
         <p>Information Collection and Use</p>
         <p>Our Apps do not collect any personal information from users. We do not require users to provide us with any personal information to use the Apps.</p>
@@ -134,7 +134,7 @@
         <p>Sharing of Information</p>
         <p>We do not share any information collected from users with third parties. All data collected is used exclusively for the purposes outlined in this Privacy Policy.</p>
         <p>Third-Party Services</p>
-        <p>TickleTap utilizes the Official Joke API to provide jokes. Cinebud uses the TMDB API to provide movie information and ratings. Please note that your use of these APIs is subject to the respective Terms of Service and Privacy Policies. We are not responsible for the privacy practices or content of third-party services.</p>
+        <p>Wrist Jester utilizes the Official Joke API to provide jokes. Cinebud uses the TMDB API to provide movie information and ratings. Please note that your use of these APIs is subject to the respective Terms of Service and Privacy Policies. We are not responsible for the privacy practices or content of third-party services.</p>
         <p>Security</p>
         <p>We take reasonable precautions to protect the information collected from users against unauthorized access, alteration, or destruction.</p>
         <p>Children's Privacy</p>
@@ -144,7 +144,7 @@
             <p>We reserve the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the updated Privacy Policy on the Apps. Your continued use of the Apps after any changes to this Privacy Policy will constitute your acceptance of such changes.</p>
         </div>
         <div class="footer">
-            <p>Thank you for using Cinebud and TickleTap</p>
+            <p>Thank you for using Cinebud and Wrist Jester</p>
         </div>
     </div>
 </body>
