--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support & Privacy Policy - Cinebud & Wrist Jester</title>
+    <title>Support & Privacy Policy - Cinebud, Wrist Jester & Eggsplore</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -44,107 +44,159 @@
             margin-top: 40px;
             color: #888;
         }
+        .app-section {
+            margin-bottom: 40px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Support</h1>
         
-        <h2>Cinebud FAQs:</h2>
-        <p>Frequently Asked Questions (FAQs):</p>
-        <ol>
-            <!-- Cinebud FAQs (unchanged from the original) -->
-            <li>
-                <h2>How do I register for an account?</h2>
-                <p>To register for an account, simply open the app and navigate to the registration screen...</p>
-            </li>
-            <li>
-                <h2>How do I log in to my account?</h2>
-                <p>To log in to your account, open the app and navigate to the login screen...</p>
-            </li>
-            <li>
-                <h2>How do I search for movies?</h2>
-                <p>To search for movies, use the search bar located at the top of the app's main screen...</p>
-            </li>
-            <li>
-                <h2>How do I rate a movie?</h2>
-                <p>To rate a movie, first, search for the movie you want to rate using the app's search functionality...</p>
-            </li>
-            <li>
-                <h2>How do I add friends?</h2>
-                <p>To add friends, navigate to the friends section of the app...</p>
-            </li>
-            <li>
-                <h2>How do I delete my account?</h2>
-                <p>To delete your account, go to the settings section of the app...</p>
-            </li>
-            <li>
-                <h2>How do I reset my password?</h2>
-                <p>To reset your password, follow these steps...</p>
-            </li>
-        </ol>
+        <div class="app-section">
+            <h2>Eggsplore FAQs:</h2>
+            <p>Frequently Asked Questions (FAQs):</p>
+            <ol>
+                <li>
+                    <h2>How do I create an account?</h2>
+                    <p>To create an account, simply open Eggsplore and enter your phone number. You'll receive a verification code via SMS. Once verified, you can complete your profile by adding your name and location.</p>
+                </li>
+                <li>
+                    <h2>How do I post a listing?</h2>
+                    <p>To post a listing, tap the "+" tab at the bottom of the screen. Fill in your listing details including title, price, quantity, egg type, and description. You can also add photos and set your location. Your phone number must be verified before posting.</p>
+                </li>
+                <li>
+                    <h2>How do I contact a seller?</h2>
+                    <p>When viewing a listing, tap the "Contact Seller" button. You'll be able to message the seller directly through the app to discuss the purchase.</p>
+                </li>
+                <li>
+                    <h2>How do I rate a seller?</h2>
+                    <p>After interacting with a seller, you can rate them by visiting their listing and tapping the "Rate Seller" button. You can provide a rating out of 5 stars and leave a comment about your experience.</p>
+                </li>
+                <li>
+                    <h2>How do I edit or delete my listing?</h2>
+                    <p>To edit or delete your listing, navigate to the listing detail page. If you're the owner, you'll see "Edit" and "Delete" buttons at the bottom of the screen.</p>
+                </li>
+                <li>
+                    <h2>How do I filter listings?</h2>
+                    <p>Use the filters at the top of the home screen to sort by distance, price, or newest. You can also filter by egg type and other characteristics like organic feed and free-range.</p>
+                </li>
+            </ol>
+        </div>
 
-        <h2>Wrist Jester FAQs:</h2>
-        <p>Frequently Asked Questions (FAQs):</p>
-        <ol>
-            <li>
-                <h2>How do I set the number of jokes I receive per day?</h2>
-                <p>To set the number of jokes you receive per day, open the Wrist Jester app, tap on the settings icon, and adjust the frequency slider from 0 to 10 jokes per day.</p>
-            </li>
-            <li>
-                <h2>How do I get an instant joke?</h2>
-                <p>To get an instant joke, simply open the Wrist Jester app and tap the "Tap to get a joke!" button on the main screen. You'll receive a joke right away.</p>
-            </li>
-            <li>
-                <h2>What is the source of the jokes?</h2>
-                <p>The jokes in Wrist Jester are provided by the <a href="https://official-joke-api.appspot.com/">Official Joke API</a>. We use this API to bring you a variety of random jokes throughout the day.</p>
-            </li>
-            <li>
-                <h2>How do I stop receiving jokes?</h2>
-                <p>To stop receiving jokes, go to the settings page and set the frequency to 0. This will disable the notifications for daily jokes.</p>
-            </li>
-            <li>
-                <h2>How do I access the Terms and Conditions?</h2>
-                <p>You can access the Terms and Conditions by tapping the "Terms and Conditions" button in the Info section of the Wrist Jester app.</p>
-            </li>
-        </ol>
+        <div class="app-section">
+            <h2>Cinebud FAQs:</h2>
+            <p>Frequently Asked Questions (FAQs):</p>
+            <ol>
+                <li>
+                    <h2>How do I register for an account?</h2>
+                    <p>To register for an account, simply open the app and navigate to the registration screen...</p>
+                </li>
+                <li>
+                    <h2>How do I log in to my account?</h2>
+                    <p>To log in to your account, open the app and navigate to the login screen...</p>
+                </li>
+                <li>
+                    <h2>How do I search for movies?</h2>
+                    <p>To search for movies, use the search bar located at the top of the app's main screen...</p>
+                </li>
+                <li>
+                    <h2>How do I rate a movie?</h2>
+                    <p>To rate a movie, first, search for the movie you want to rate using the app's search functionality...</p>
+                </li>
+                <li>
+                    <h2>How do I add friends?</h2>
+                    <p>To add friends, navigate to the friends section of the app...</p>
+                </li>
+                <li>
+                    <h2>How do I delete my account?</h2>
+                    <p>To delete your account, go to the settings section of the app...</p>
+                </li>
+                <li>
+                    <h2>How do I reset my password?</h2>
+                    <p>To reset your password, follow these steps...</p>
+                </li>
+            </ol>
+        </div>
+
+        <div class="app-section">
+            <h2>Wrist Jester FAQs:</h2>
+            <p>Frequently Asked Questions (FAQs):</p>
+            <ol>
+                <li>
+                    <h2>How do I set the number of jokes I receive per day?</h2>
+                    <p>To set the number of jokes you receive per day, open the Wrist Jester app, tap on the settings icon, and adjust the frequency slider from 0 to 10 jokes per day.</p>
+                </li>
+                <li>
+                    <h2>How do I get an instant joke?</h2>
+                    <p>To get an instant joke, simply open the Wrist Jester app and tap the "Tap to get a joke!" button on the main screen. You'll receive a joke right away.</p>
+                </li>
+                <li>
+                    <h2>What is the source of the jokes?</h2>
+                    <p>The jokes in Wrist Jester are provided by the <a href="https://official-joke-api.appspot.com/">Official Joke API</a>. We use this API to bring you a variety of random jokes throughout the day.</p>
+                </li>
+                <li>
+                    <h2>How do I stop receiving jokes?</h2>
+                    <p>To stop receiving jokes, go to the settings page and set the frequency to 0. This will disable the notifications for daily jokes.</p>
+                </li>
+                <li>
+                    <h2>How do I access the Terms and Conditions?</h2>
+                    <p>You can access the Terms and Conditions by tapping the "Terms and Conditions" button in the Info section of the Wrist Jester app.</p>
+                </li>
+            </ol>
+        </div>
 
         <div class="contact">
             <h2>Contact Us:</h2>
-            <p>If you have any further questions or encounter any issues while using the app, please don’t hesitate to contact us. You can reach us via email at heverlym@gmail.com. We're here to help and will do our best to assist you as quickly as possible.</p>
+            <p>If you have any further questions or encounter any issues while using any of our apps, please don't hesitate to contact us. You can reach us via email at heverlym@gmail.com. We're here to help and will do our best to assist you as quickly as possible.</p>
         </div>
 
         <h1>Privacy Policy</h1>
-        <p>This Privacy Policy applies to both Cinebud and Wrist Jester (“we,” “us,” or “our”) and explains how we collect, use, share, and protect information in relation to our mobile applications (the "Apps").</p>
-        <p>By using either of the Apps, you agree to the collection and use of information in accordance with this Privacy Policy.</p>
-        <p>Information Collection and Use</p>
-        <p>Our Apps do not collect any personal information from users. We do not require users to provide us with any personal information to use the Apps.</p>
-        <p>The only information we collect is non-personal information that is generated automatically as users interact with the Apps. This includes:</p>
+        <p>This Privacy Policy applies to Cinebud, Wrist Jester, and Eggsplore ("we," "us," or "our") and explains how we collect, use, share, and protect information in relation to our mobile applications (the "Apps").</p>
+        <p>By using any of the Apps, you agree to the collection and use of information in accordance with this Privacy Policy.</p>
+        
+        <h2>Information Collection and Use</h2>
+        <p>For Cinebud and Wrist Jester, we collect minimal non-personal information. For Eggsplore, we collect:</p>
         <ul>
-            <li>Usage data, such as the actions performed within the Apps and the frequency of use.</li>
-            <li>Technical information, such as device information (e.g., device model, operating system version) and App version.</li>
+            <li>Phone number (for account verification)</li>
+            <li>Name (for user profile)</li>
+            <li>Location data (for listing proximity)</li>
+            <li>User-provided content (listings, ratings, and messages)</li>
+            <li>Device information for app functionality</li>
         </ul>
-        <p>Use of Information</p>
-        <p>We use the information collected solely for the purpose of improving the user experience and functionality of the Apps. This includes:</p>
+
+        <h2>Use of Information</h2>
+        <p>We use the collected information for:</p>
         <ul>
-            <li>Analyzing usage patterns to identify areas for improvement.</li>
-            <li>Debugging and troubleshooting technical issues.</li>
-            <li>Enhancing the performance and features of the Apps.</li>
+            <li>User authentication and account management</li>
+            <li>Enabling communication between buyers and sellers</li>
+            <li>Providing location-based services</li>
+            <li>Improving app functionality and user experience</li>
+            <li>Analytics and debugging</li>
         </ul>
-        <p>Sharing of Information</p>
-        <p>We do not share any information collected from users with third parties. All data collected is used exclusively for the purposes outlined in this Privacy Policy.</p>
-        <p>Third-Party Services</p>
-        <p>Wrist Jester utilizes the Official Joke API to provide jokes. Cinebud uses the TMDB API to provide movie information and ratings. Please note that your use of these APIs is subject to the respective Terms of Service and Privacy Policies. We are not responsible for the privacy practices or content of third-party services.</p>
-        <p>Security</p>
-        <p>We take reasonable precautions to protect the information collected from users against unauthorized access, alteration, or destruction.</p>
-        <p>Children's Privacy</p>
-        <p>Our Apps are not directed to children under the age of 13, and we do not knowingly collect personal information from children. If you believe that we may have inadvertently collected personal information from a child under the age of 13, please contact us immediately.</p>
+
+        <h2>Data Storage and Security</h2>
+        <p>We use Firebase for secure data storage and authentication. All data is encrypted in transit and at rest. We implement industry-standard security measures to protect your information.</p>
+
+        <h2>Third-Party Services</h2>
+        <p>Our apps utilize various third-party services:</p>
+        <ul>
+            <li>Eggsplore: Firebase (authentication, storage, database)</li>
+            <li>Wrist Jester: Official Joke API</li>
+            <li>Cinebud: TMDB API</li>
+        </ul>
+
         <div class="privacy">
             <h2>Changes to This Privacy Policy</h2>
             <p>We reserve the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the updated Privacy Policy on the Apps. Your continued use of the Apps after any changes to this Privacy Policy will constitute your acceptance of such changes.</p>
         </div>
+
         <div class="footer">
-            <p>Thank you for using Cinebud and Wrist Jester</p>
+            <p>Thank you for using our apps!</p>
         </div>
     </div>
 </body>
