--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
                     <h2>How do I filter listings?</h2>
                     <p>Use the filters at the top of the home screen to sort by distance, price, or newest. You can also filter by egg type and other characteristics like organic feed and free-range.</p>
                 </li>
+                <li>
+                    <h2>What are Premium features?</h2>
+                    <p>Premium users get the ability to feature their listings, receive push notifications for new listings to get early access, and display a premium badge on their Profile.</p>
+                </li>
+                <li>
+                    <h2>How do I get Premium?</h2>
+                    <p>Premium features can be purchased through the App Store.</p>
+                </li>
             </ol>
         </div>
 
