--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
                     <p>Premium features can be purchased through the App Store.</p>
                 </li>
             </ol>
+
+            <div style="background-color: #e9ecef; padding: 15px; margin: 20px 0; border-left: 4px solid #d6336c;">
+                <h2>Subscription Information</h2>
+                <p>Eggsplore offers two subscription options:</p>
+                <ul>
+                    <li><strong>Monthly Premium:</strong> Billed monthly, cancel anytime</li>
+                    <li><strong>Annual Premium:</strong> Save 37% with annual billing, cancel anytime</li>
+                </ul>
+                <p>Important subscription terms:</p>
+                <ul>
+                    <li>Payment will be charged to your Apple ID account at confirmation of purchase</li>
+                    <li>Subscription automatically renews unless auto-renewal is turned off at least 24 hours before the end of the current period</li>
+                    <li>Your account will be charged for renewal within 24 hours prior to the end of the current period</li>
+                    <li>You can manage and cancel your subscriptions by going to your account settings on the App Store after purchase</li>
+                    <li>Any unused portion of a free trial period will be forfeited when purchasing a subscription</li>
+                </ul>
+            </div>
         </div>
 
         <div class="app-section">
@@ -175,6 +192,7 @@
             <li>Location data (for listing proximity)</li>
             <li>User-provided content (listings, ratings, and messages)</li>
             <li>Device information for app functionality</li>
+            <li>Purchase information for premium subscriptions (Eggsplore only)</li>
         </ul>
 
         <h2>Use of Information</h2>
@@ -183,6 +201,8 @@
             <li>User authentication and account management</li>
             <li>Enabling communication between buyers and sellers</li>
             <li>Providing location-based services</li>
+            <li>Managing premium subscriptions (Eggsplore)</li>
+            <li>Processing payments through Apple's payment system (Eggsplore)</li>
             <li>Improving app functionality and user experience</li>
             <li>Analytics and debugging</li>
         </ul>
@@ -193,7 +213,7 @@
         <h2>Third-Party Services</h2>
         <p>Our apps utilize various third-party services:</p>
         <ul>
-            <li>Eggsplore: Firebase (authentication, storage, database)</li>
+            <li>Eggsplore: Firebase (authentication, storage, database), Apple's StoreKit (for in-app purchases)</li>
             <li>Wrist Jester: Official Joke API</li>
             <li>Cinebud: TMDB API</li>
         </ul>
