--- a/index.html
+++ b/index.html
@@ -119,31 +119,23 @@
             <ol>
                 <li>
                     <h2>How do I register for an account?</h2>
-                    <p>To register for an account, simply open the app and navigate to the registration screen...</p>
+                    <p>To register for an account, simply open the app and navigate to the registration screen. You will be prompted to enter your desired username, email and password. Once you've entered the required information, tap the "Submit" button to create your account.</p>
                 </li>
                 <li>
                     <h2>How do I log in to my account?</h2>
-                    <p>To log in to your account, open the app and navigate to the login screen...</p>
+                    <p>To log in to your account, open the app and navigate to the login screen. Enter your email and password, then tap the "Login" button to access your account.</p>
                 </li>
                 <li>
                     <h2>How do I search for movies?</h2>
-                    <p>To search for movies, use the search bar located at the top of the app's main screen...</p>
+                    <p>To search for movies, use the search bar located at the top of the app's main screen. Simply enter the title of the movie you're looking for and tap the search icon. You'll be presented with a list of search results that match your query.</p>
                 </li>
                 <li>
                     <h2>How do I rate a movie?</h2>
-                    <p>To rate a movie, first, search for the movie you want to rate using the app's search functionality...</p>
+                    <p>To rate a movie, first, search for the movie you want to rate using the app's search functionality. Once you've found the movie, tap on it to view its details. You'll see an option to rate the movie on a scale of 0 to 10. Simply scroll the desired rating to submit your vote using the Submit button.</p>
                 </li>
                 <li>
                     <h2>How do I add friends?</h2>
-                    <p>To add friends, navigate to the friends section of the app...</p>
-                </li>
-                <li>
-                    <h2>How do I delete my account?</h2>
-                    <p>To delete your account, go to the settings section of the app...</p>
-                </li>
-                <li>
-                    <h2>How do I reset my password?</h2>
-                    <p>To reset your password, follow these steps...</p>
+                    <p>To add friends, navigate to the friends section of the app. You'll see an option to search for other users by their username. Enter the username of the person you want to add as a friend and tap the "Add Friend" button. Once the request is sent and accepted, you'll be able to see your friend's movie ratings.</p>
                 </li>
             </ol>
         </div>
